# personal_news_agent

./: .env.example  .gitignore  AGENTs.md  README.md  crawl_results.json  deep_dive_results.json  deep_dive_zhangxue_sports.json  due_crawl_plan.json  feed_preview_politics_sports.json  feed_preview_results.json  native_search_ingest_zhangxue_sports.json  pyproject.toml  requirements.txt  run_dev.py  source_audit_politics.json  source_audit_results.json  source_search_audit_zhangxue_all.json  source_search_audit_zhangxue_sports.json  source_smoke_results.json  sources.yaml
docs/: source_search_ingestion_design.md  topic_views_design.md
personal_news_agent/: __init__.py  app.py  config.py
personal_news_agent/core/: __init__.py  categories.py  models.py  text.py
personal_news_agent/prompts/: deep_dive_query_expansion.md
personal_news_agent/services/: article_fetch.py  auth.py  chat.py  crawl.py  deep_dive.py  events.py  llm.py  model_config.py  native_ingestion.py  onboarding.py  personalization.py  (+10 more)
scripts/: apply_pna_schema.py  audit_source_search.py  audit_sources.py  check_elasticsearch.py  crawl_all.py  deep_dive.py  ingest_native_search.py  preview_feed.py  reindex_elasticsearch.py  run_due_crawl.py  setup_elasticsearch.py  setup_ext_env.sh  smoke_sources.py  start_elasticsearch.py  stop_elasticsearch.py  test_realname.py
sql/: drop_pna_tables_mysql.sql  drop_pna_tables_sqlite.sql  pna_schema_mysql.sql  pna_schema_sqlite.sql  upgrade_pna_onboarding_profile_mysql.sql  upgrade_pna_realname_mysql.sql
tests/: test_api.py  test_registry.py  test_services.py
(+10 files in other folders)
