[project]
name = "personal-news-agent"
version = "0.1.0"
description = "Focused personal news assistant MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
  "PyMySQL>=1.1.0",
  "alibabacloud_cloudauth20190307==3.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
